2009-10-19 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-menubar.c:
	* src/nact/nautilus-actions-maintainer.actions:
	Add a 'Dump selection' item in maintainer menu.

	* src/nact/nact-main-menubar.c (on_duplicate_activated):
	Check duplicate status after having reinitialized the origin object.

2009-10-18 Pierre Wieser <pwieser@trychlos.org>

	Open a popup on right click on the treeview.

	* src/nact/nact-iactions-list.c
	(on_button_press_event): Manage right mouse click.
	(open_popup): New function.
	(on_key_pressed_event): Only manage acclerators when treeview has the
	focus.

	* src/nact/nact-main-menubar.c:
	* src/nact/nact-main-menubar.h (nact_main_menubar_open_popup):
	New function.

	* src/nact/nautilus-actions-config-tool.actions:
	Define the contextual popup menu.

2009-10-17 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-main-menubar.c (on_iactions_list_count_updated):
	Display the count of items in the statusbar.

	* src/nact/nact-iactions-list.c
	(collapse_to_parent, expand_to_first_child):
	Make left and right arrows accelerators to collapse/expand trees.

	* src/nact/nact-iactions-list.c (inline_edition):
	Make F2 an accelerator to inline edit the label.

	Creation of a root menu in the Nautilus context menu is now a
	user preference.

	* data/nautilus-actions.schemas.in: Define a schema for the preference.

	* src/nact/nact-preferences-editor.c: Edit the preference.

	* src/nact/nautilus-actions-config-tool.ui: Define a new checkbox.

	* src/plugin/nautilus-actions.c:
	Create a root menu only if users has asked for.

	* src/runtime/na-ipivot-consumer.c:
	* src/runtime/na-ipivot-consumer.h:
	Define new virtual which handle the monitoring of the preference.

	* src/runtime/na-iprefs.c:
	* src/runtime/na-iprefs.h:
	Read/write the preference in GConf.

	* src/nact/nact-main-window.c (setup_dialog_title):
	Restore function which had disappeared since v 1.12.

	* src/nact/nact-iactions-list.c